[package]
name = "looper"
version = "1.0.0"
description = "Applicazione per la gestione di marker e loop audio"
authors = ["Simone"]
edition = "2021"

[lib]
name = "looper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
